--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.main.banner-mode=off
 logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(%logger{0}){blue} %clr(%m){faint}%n
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Careonline
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.7.10:3306/careonlinedb
+spring.datasource.username=sqluser01
+spring.datasource.password=nalashaa@123
 logging.level.root=WARN
 spring.jpa.open-in-view=false
 
