--- a/pom.xml
+++ b/pom.xml
@@ -191,5 +191,16 @@
       <artifactId>jaxrs-ri</artifactId>
       <version>2.29</version>
     </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.0.6</version>
+    </dependency>
+      <dependency>
+          <groupId>com.itextpdf</groupId>
+          <artifactId>itext7-core</artifactId>
+          <version>7.0.4</version>
+          <type>pom</type>
+      </dependency>
   </dependencies>
 </project>
