Careonline PreAuth Bug fix and Dependent detail for response add 15-06-2020

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=sqluser01
 spring.datasource.password=nalashaa@123
 logging.level.root=WARN
 spring.jpa.open-in-view=false
-
+spring.cache.type=none
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
